--- a/.github/workflows/com.yml
+++ b/.github/workflows/com.yml
@@ -3,6 +3,7 @@ name: Auto Commit
 on:
   schedule:
     - cron: '0 */12 * * *'  # Runs every 12 hours
+  workflow_dispatch:  # Allows manual trigger
 
 jobs:
   commit:
