--- a/.github/workflows/com.yml
+++ b/.github/workflows/com.yml
@@ -2,7 +2,7 @@ name: Auto Commit
 
 on:
   schedule:
-    - cron: '0 */12 * * *'  # Runs every 12 hours
+     - cron: '* * * * *'  # Runs every minute
   workflow_dispatch:  # Allows manual trigger
 
 jobs:
