--- a/.github/workflows/com.yml
+++ b/.github/workflows/com.yml
@@ -27,10 +27,210 @@ jobs:
           echo "Updating $RANDOM_FILE"
           echo "Auto update on $(date)" >> $RANDOM_FILE
 
-      - name: Generate Commit Message
+         - name: Generate Commit Message
         id: commit_message
         run: |
-          MESSAGES=("Updated docs" "Refactored settings" "Minor fixes" "Updated changelog" "Tweaked configurations")
+          MESSAGES=(
+            "Updated documentation"
+            "Refactored code for better readability"
+            "Fixed minor bug in authentication flow"
+            "Optimized database queries"
+            "Improved error handling"
+            "Updated dependencies"
+            "Enhanced security measures"
+            "Fixed UI alignment issues"
+            "Refactored API endpoints"
+            "Added comments for clarity"
+            "Removed unused variables"
+            "Optimized page loading speed"
+            "Refactored helper functions"
+            "Updated test cases"
+            "Fixed broken links in docs"
+            "Implemented lazy loading"
+            "Updated caching strategy"
+            "Fixed CORS issues"
+            "Improved search functionality"
+            "Fixed mobile responsiveness"
+            "Updated translations"
+            "Enhanced dark mode styles"
+            "Fixed incorrect API response"
+            "Refactored Redux actions"
+            "Updated session timeout settings"
+            "Refactored database schema"
+            "Fixed typo in UI"
+            "Refactored event handlers"
+            "Implemented new feature flag"
+            "Optimized background jobs"
+            "Improved pagination logic"
+            "Fixed issue with token expiration"
+            "Updated API documentation"
+            "Improved error messages"
+            "Added input validation"
+            "Refactored CSS styles"
+            "Improved accessibility features"
+            "Fixed memory leak in worker threads"
+            "Updated logging strategy"
+            "Refactored authentication logic"
+            "Enhanced notification system"
+            "Updated WebSocket implementation"
+            "Improved data synchronization"
+            "Fixed date formatting issue"
+            "Added better retry logic"
+            "Improved build scripts"
+            "Optimized static assets"
+            "Updated analytics tracking"
+            "Fixed SQL injection vulnerability"
+            "Refactored component structure"
+            "Enhanced UI animations"
+            "Updated deployment scripts"
+            "Improved CI/CD pipeline"
+            "Fixed infinite loop issue"
+            "Updated environment variables"
+            "Fixed alignment in modals"
+            "Optimized JSON parsing"
+            "Refactored API middleware"
+            "Improved performance of loops"
+            "Fixed issue with form validation"
+            "Added custom error pages"
+            "Refactored permission handling"
+            "Updated OAuth integration"
+            "Improved state management"
+            "Fixed race condition in async tasks"
+            "Implemented new logging format"
+            "Improved UI responsiveness"
+            "Optimized database indexing"
+            "Refactored user roles logic"
+            "Fixed security issue in headers"
+            "Updated Dockerfile for better compatibility"
+            "Fixed issue with email verification"
+            "Improved image compression"
+            "Optimized long-running queries"
+            "Updated default config values"
+            "Refactored form submission logic"
+            "Implemented better error tracking"
+            "Fixed incorrect currency conversion"
+            "Optimized API request payloads"
+            "Updated sorting algorithm"
+            "Refactored search filters"
+            "Improved dark mode contrast"
+            "Fixed session persistence issue"
+            "Refactored caching strategy"
+            "Updated password hashing algorithm"
+            "Improved UI contrast ratios"
+            "Fixed overflow issue in UI"
+            "Refactored event listeners"
+            "Optimized file upload process"
+            "Fixed navigation bar issue"
+            "Updated modal transitions"
+            "Improved keyboard accessibility"
+            "Fixed timezone conversion bug"
+            "Updated unit tests"
+            "Refactored state transitions"
+            "Improved mobile touch gestures"
+            "Fixed layout shift issues"
+            "Optimized webpack build"
+            "Refactored Redux store"
+            "Improved logging format"
+            "Fixed incorrect form labels"
+            "Optimized SQL transactions"
+            "Refactored CLI commands"
+            "Updated Jest configuration"
+            "Implemented batch processing"
+            "Fixed dropdown menu issue"
+            "Optimized thread pooling"
+            "Improved API pagination"
+            "Refactored file structure"
+            "Fixed duplicate entries in DB"
+            "Updated README with FAQs"
+            "Refactored authentication middleware"
+            "Improved push notification handling"
+            "Fixed issue with user avatars"
+            "Updated cron job scheduling"
+            "Optimized memory usage"
+            "Improved WebSocket reconnect logic"
+            "Fixed error with file paths"
+            "Optimized SVG rendering"
+            "Refactored search indexing"
+            "Updated CI pipeline to speed up builds"
+            "Refactored Redux reducers"
+            "Fixed issue with network timeouts"
+            "Improved component lifecycle methods"
+            "Optimized AI model inference"
+            "Refactored API gateway logic"
+            "Updated GraphQL schema"
+            "Fixed HTTP caching headers"
+            "Refactored multi-threading implementation"
+            "Optimized load balancing configurations"
+            "Improved JWT token refresh logic"
+            "Fixed incorrect regex pattern"
+            "Updated ESLint rules"
+            "Optimized GPU resource allocation"
+            "Refactored websocket event handlers"
+            "Improved cloud storage integration"
+            "Fixed race condition in database writes"
+            "Updated cross-browser compatibility"
+            "Refactored build system"
+            "Improved fallback error messages"
+            "Fixed UI flickering issue"
+            "Optimized deep learning model deployment"
+            "Updated prefetching logic for images"
+            "Fixed inconsistencies in CSV export"
+            "Refactored caching mechanism"
+            "Updated geolocation API usage"
+            "Fixed timestamp formatting issues"
+            "Improved data visualization rendering"
+            "Optimized REST API rate limits"
+            "Fixed issue with batch processing jobs"
+            "Updated Docker networking configurations"
+            "Optimized multi-language support"
+            "Refactored cloud function triggers"
+            "Fixed inconsistent button padding"
+            "Updated UI framework dependencies"
+            "Fixed issue with OAuth token refresh"
+            "Improved tooltips for better UX"
+            "Refactored authentication providers"
+            "Fixed security vulnerability in cookies"
+            "Updated user session expiration policy"
+            "Refactored API request validation"
+            "Optimized frontend animations"
+            "Improved AI chatbot response time"
+            "Fixed issue with database migrations"
+            "Updated image alt text for accessibility"
+            "Refactored config file parsing"
+            "Optimized webhook event processing"
+            "Improved documentation examples"
+            "Fixed bug causing duplicate emails"
+            "Refactored code to reduce cyclomatic complexity"
+            "Updated error codes for consistency"
+            "Optimized GraphQL query caching"
+            "Refactored import paths for clarity"
+            "Fixed issue with binary file uploads"
+            "Improved retry mechanism for failed tasks"
+            "Updated video streaming logic"
+            "Fixed issue with notification preferences"
+            "Refactored data aggregation queries"
+            "Optimized search indexing for large datasets"
+            "Updated UI themes for consistency"
+            "Fixed issue with API error responses"
+            "Refactored state management logic"
+            "Optimized function calls for speed"
+            "Fixed alignment in form fields"
+            "Updated API key handling for security"
+            "Improved load balancer configurations"
+            "Fixed animation delay on mobile"
+            "Refactored CSS variables for theming"
+            "Updated command-line tool options"
+            "Optimized DNS resolution times"
+            "Improved authentication token storage"
+            "Fixed data deserialization errors"
+            "Refactored OpenAPI spec generation"
+            "Updated dynamic routing rules"
+            "Fixed incorrect font rendering"
+            "Improved load time of heavy pages"
+            "Refactored date parsing logic"
+            "Optimized CDN caching strategy"
+            "Fixed issue with dropdown accessibility"
+          )
           RANDOM_MESSAGE=${MESSAGES[$RANDOM % ${#MESSAGES[@]}]}
           echo "message=$RANDOM_MESSAGE" >> $GITHUB_ENV
 
