--- a/.github/workflows/com.yml
+++ b/.github/workflows/com.yml
@@ -23,11 +23,10 @@ jobs:
         run: |
           FILES=("README.md" "config.json" "docs/setup.txt" "src/settings.py" "CHANGELOG.md")
           RANDOM_FILE=${FILES[$RANDOM % ${#FILES[@]}]}
-
           echo "Updating $RANDOM_FILE"
           echo "Auto update on $(date)" >> $RANDOM_FILE
 
-         - name: Generate Commit Message
+      - name: Generate Commit Message  # <-- Fix indentation here
         id: commit_message
         run: |
           MESSAGES=(
